# Watchdog

./: .gitignore  .goreleaser.yaml  LICENSE  README.md  SECURITY.md  action.yml  commands  go.mod  go.sum  install.ps1  install.sh  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml  release.yml
adapters/_shared/: __init__.py  preflight.py
adapters/github_action/: README.md  __init__.py  action.yml  annotations.py  entry.py
adapters/mcp_server/: server.py
adapters/path_shim/: __init__.py  cli.py  installer.py  resolver.py  shim.py
cmd/watchdog-action/: main.go
cmd/watchdog-mcp/: main.go
cmd/watchdog-pretool/: main.go  main_test.go
cmd/watchdog-prompt/: main.go  main_test.go
cmd/watchdog-scan/: main.go  main_test.go
cmd/watchdog-session/: main.go  main_test.go
cmd/watchdog-shim/: cache.go  cache_test.go  doctor_smoke_test.go  main.go
cmd/watchdog-shim-exec/: exec_unix.go  exec_windows.go  helpers_test.go  main.go  main_test.go
commands/: watchdog-scan-local.md  watchdog-scan.md
hooks/: pretool.sh  prompt.sh  session.sh
hooks/lib/: resolve.sh
internal/analyzer/: analyzer.go  analyzer_test.go  prompt.go
internal/audit/: audit.go  audit_test.go
internal/cli/: tty.go  tty_test.go
internal/config/: config.go  config_test.go
internal/daemon/: daemon.go  launchd.go  systemd.go  templates_test.go
internal/decisions/: decisions.go  decisions_test.go  signing_test.go
internal/fetchers/: digest.go  ecosystems.go  fetchers_test.go  gomodule.go  homebrew.go  http.go  nuget.go  plugin.go  tarsafe.go  tarsafe_adversarial_test.go
internal/ghaction/: annotations.go  paths.go  (+2 more)
watchdog_core/: __init__.py  analyzer.py  fetchers.py  ledger.py  log.py  mascot.py  osv.py  parsers.py  paths.py  policy.py  providers.py  types.py
(+91 files in other folders)
