[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "watchdog-scanner"
version = "0.3.0"
description = "Pre-install supply-chain scanner: OSV CVE lookup + LLM source review for packages and Claude plugins. Engine + per-host adapters."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Maxlemore97", email = "30655722+Maxlemore97@users.noreply.github.com" }
]
keywords = ["security", "supply-chain", "claude", "claude-code", "osv", "mcp", "pre-install"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
dependencies = []

[project.optional-dependencies]
mcp = ["mcp>=1.0"]
dev = ["pytest>=7"]

[project.urls]
Repository = "https://github.com/Maxlemore97/Watchdog"

[project.scripts]
watchdog-scan      = "adapters.claude_code.entry.manual:main"
watchdog-mcp       = "adapters.mcp_server.server:main"
watchdog-shim      = "adapters.path_shim.cli:main"
watchdog-shim-exec = "adapters.path_shim.shim:main"
watchdog-action    = "adapters.github_action.entry:main"

[tool.setuptools]
packages = [
    "watchdog_core",
    "adapters",
    "adapters._shared",
    "adapters.claude_code",
    "adapters.claude_code.entry",
    "adapters.github_action",
    "adapters.mcp_server",
    "adapters.path_shim",
]

[tool.setuptools.package-data]
watchdog_core = ["*.py"]
